# br-thermal-printer-app

./: .clang-format  .test  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  cz.yaml
.github/workflows/: _build-deb.yml  _test.yml  build-deb.yml  bump.yml  commitlint.yml  release.yml  test.yml
apps/: CMakeLists.txt  main.cpp
cmake/: PapplCups.cmake  SafetyFlags.cmake
debian/: br-thermal.postinst  br-thermal.postrm  br-thermal.prerm  changelog  control  copyright  rules
include/: BrThermal.h  BrotherThermal.h
man/: br-thermal.8
scripts/: changelog-to-dch.sh
src/: BrThermal.cpp  BrotherThermal.cpp  CMakeLists.txt
src/drivers/: CMakeLists.txt
src/drivers/_common/: CMakeLists.txt
src/drivers/_common/include/: util.h
src/drivers/_common/src/: CMakeLists.txt  util.cpp
src/drivers/_common/tests/: CMakeLists.txt  util.cpp
src/drivers/pte550w/: CMakeLists.txt
src/drivers/pte550w/include/: pte550w.h
src/drivers/pte550w/src/: CMakeLists.txt  pte550w.cpp
src/drivers/pte550w/tests/: CMakeLists.txt  commands.cpp
src/drivers/td2000/: CMakeLists.txt
src/drivers/td2000/apps/: CMakeLists.txt  main.cpp
src/drivers/td2000/cmake/: IncludeBlobs.cmake
src/drivers/td2000/data/: CMakeLists.txt
src/drivers/td2000/data/media/: README.md
src/drivers/td2000/data/templates/: media_blob.inc.in
src/drivers/td2000/include/: td2000.h
src/drivers/td2000/src/: CMakeLists.txt  td2000.cpp
src/drivers/td2000/tests/: CMakeLists.txt  commands.cpp  media.cpp
tests/: CMakeLists.txt
